--- a/TshirtStore.SharedKernel/TshirtStore.SharedKernel.csproj
+++ b/TshirtStore.SharedKernel/TshirtStore.SharedKernel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A255AE4A-8902-4699-8C97-E79A2874448B}</ProjectGuid>
+    <ProjectGuid>{A8C46B03-AA85-4B89-9156-1AE00A380B30}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TshirtStore.Domain</RootNamespace>
-    <AssemblyName>TshirtStore.Domain</AssemblyName>
+    <RootNamespace>TshirtStore.SharedKernel</RootNamespace>
+    <AssemblyName>TshirtStore.SharedKernel</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,12 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Category.cs" />
-    <Compile Include="Entities\Order.cs" />
-    <Compile Include="Entities\OrderItem.cs" />
-    <Compile Include="Entities\Product.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Enums\EOrderStatus.cs" />
+    <Compile Include="Events\Contratcs\IDomainEvent.cs" />
+    <Compile Include="Events\DomainEvent.cs" />
+    <Compile Include="IContainer.cs" />
+    <Compile Include="IHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
