--- a/TshirtStore.Domain.Tests/TshirtStore.Domain.Tests.csproj
+++ b/TshirtStore.Domain.Tests/TshirtStore.Domain.Tests.csproj
@@ -45,11 +45,15 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Scopes\CategoryScopeTests.cs" />
+    <Compile Include="Scopes\UserScopeTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,6 +61,10 @@
     <ProjectReference Include="..\TshirtStore.Domain\TshirtStore.Domain.csproj">
       <Project>{a255ae4a-8902-4699-8c97-e79a2874448b}</Project>
       <Name>TshirtStore.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TshirtStore.SharedKernel\TshirtStore.SharedKernel.csproj">
+      <Project>{A8C46B03-AA85-4B89-9156-1AE00A380B30}</Project>
+      <Name>TshirtStore.SharedKernel</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
