--- a/TshirtStore.SharedKernel/TshirtStore.SharedKernel.csproj
+++ b/TshirtStore.SharedKernel/TshirtStore.SharedKernel.csproj
@@ -42,10 +42,14 @@
   <ItemGroup>
     <Compile Include="Events\Contratcs\IDomainEvent.cs" />
     <Compile Include="Events\DomainEvent.cs" />
+    <Compile Include="Events\DomainNotification.cs" />
+    <Compile Include="Helper\StringHelper.cs" />
     <Compile Include="IContainer.cs" />
     <Compile Include="IHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\AssertionConcern.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
