--- a/TshirtStore.Domain/TshirtStore.Domain.csproj
+++ b/TshirtStore.Domain/TshirtStore.Domain.csproj
@@ -40,6 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CategoryCommands\CreateCategoryCommand.cs" />
+    <Compile Include="Commands\CategoryCommands\DeleteCategoryCommand.cs" />
+    <Compile Include="Commands\CategoryCommands\EditCategoryCommand.cs" />
+    <Compile Include="Commands\OrderCommands\CreateOrderCommand.cs" />
+    <Compile Include="Commands\OrderCommands\CreateOrderItemCommand.cs" />
+    <Compile Include="Commands\ProductCommands\CreateProductCommand.cs" />
+    <Compile Include="Commands\ProductCommands\UpdateProductInfoCommand.cs" />
+    <Compile Include="Commands\UserCommands\RegisterUserCommand.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\OrderItem.cs" />
@@ -52,6 +60,9 @@
     <Compile Include="Scopes\OrderScopes.cs" />
     <Compile Include="Scopes\ProductScopes.cs" />
     <Compile Include="Scopes\UsersScopes.cs" />
+    <Compile Include="Specs\OrderSpecs.cs" />
+    <Compile Include="Specs\ProductSpecs.cs" />
+    <Compile Include="Specs\UserSpecs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TshirtStore.SharedKernel\TshirtStore.SharedKernel.csproj">
@@ -59,6 +70,7 @@
       <Name>TshirtStore.SharedKernel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
