--- a/TshirtStore.Domain/TshirtStore.Domain.csproj
+++ b/TshirtStore.Domain/TshirtStore.Domain.csproj
@@ -55,11 +55,19 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="Enums\EOrderStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ICategoryRepository.cs" />
+    <Compile Include="Repositories\IOrderRepository.cs" />
+    <Compile Include="Repositories\IProductRepository.cs" />
+    <Compile Include="Repositories\IUserRepository.cs" />
     <Compile Include="Scopes\CategoryScopes.cs" />
     <Compile Include="Scopes\OrderItemScopes.cs" />
     <Compile Include="Scopes\OrderScopes.cs" />
     <Compile Include="Scopes\ProductScopes.cs" />
     <Compile Include="Scopes\UsersScopes.cs" />
+    <Compile Include="Services\ICategoryApplicationService.cs" />
+    <Compile Include="Services\IOrderApplicationService.cs" />
+    <Compile Include="Services\IProductApplicationService.cs" />
+    <Compile Include="Services\IUserApplicationService.cs" />
     <Compile Include="Specs\OrderSpecs.cs" />
     <Compile Include="Specs\ProductSpecs.cs" />
     <Compile Include="Specs\UserSpecs.cs" />
