--- a/TshirtStore.ApplicationService/TshirtStore.ApplicationService.csproj
+++ b/TshirtStore.ApplicationService/TshirtStore.ApplicationService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A255AE4A-8902-4699-8C97-E79A2874448B}</ProjectGuid>
+    <ProjectGuid>{809C7F78-38F3-4D06-B68C-70CADAA24BD6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TshirtStore.Domain</RootNamespace>
-    <AssemblyName>TshirtStore.Domain</AssemblyName>
+    <RootNamespace>TshirtStore.ApplicationService</RootNamespace>
+    <AssemblyName>TshirtStore.ApplicationService</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,46 +40,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CategoryCommands\CreateCategoryCommand.cs" />
-    <Compile Include="Commands\CategoryCommands\DeleteCategoryCommand.cs" />
-    <Compile Include="Commands\CategoryCommands\EditCategoryCommand.cs" />
-    <Compile Include="Commands\OrderCommands\CreateOrderCommand.cs" />
-    <Compile Include="Commands\OrderCommands\CreateOrderItemCommand.cs" />
-    <Compile Include="Commands\ProductCommands\CreateProductCommand.cs" />
-    <Compile Include="Commands\ProductCommands\UpdateProductInfoCommand.cs" />
-    <Compile Include="Commands\UserCommands\RegisterUserCommand.cs" />
-    <Compile Include="Entities\Category.cs" />
-    <Compile Include="Entities\Order.cs" />
-    <Compile Include="Entities\OrderItem.cs" />
-    <Compile Include="Entities\Product.cs" />
-    <Compile Include="Entities\User.cs" />
-    <Compile Include="Enums\EOrderStatus.cs" />
+    <Compile Include="ApplicationService.cs" />
+    <Compile Include="CategoryApplicationService.cs" />
+    <Compile Include="OrderApplicationService.cs" />
+    <Compile Include="ProductApplicationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ICategoryRepository.cs" />
-    <Compile Include="Repositories\IOrderRepository.cs" />
-    <Compile Include="Repositories\IProductRepository.cs" />
-    <Compile Include="Repositories\IUserRepository.cs" />
-    <Compile Include="Repositories\OrderApplicationService.cs" />
-    <Compile Include="Scopes\CategoryScopes.cs" />
-    <Compile Include="Scopes\OrderItemScopes.cs" />
-    <Compile Include="Scopes\OrderScopes.cs" />
-    <Compile Include="Scopes\ProductScopes.cs" />
-    <Compile Include="Scopes\UsersScopes.cs" />
-    <Compile Include="Services\ICategoryApplicationService.cs" />
-    <Compile Include="Services\IOrderApplicationService.cs" />
-    <Compile Include="Services\IProductApplicationService.cs" />
-    <Compile Include="Services\IUserApplicationService.cs" />
-    <Compile Include="Specs\OrderSpecs.cs" />
-    <Compile Include="Specs\ProductSpecs.cs" />
-    <Compile Include="Specs\UserSpecs.cs" />
+    <Compile Include="UserApplicationService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TshirtStore.Domain\TshirtStore.Domain.csproj">
+      <Project>{a255ae4a-8902-4699-8c97-e79a2874448b}</Project>
+      <Name>TshirtStore.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TshirtStore.Infra\TshirtStore.Infra.csproj">
+      <Project>{8db3ca9f-e586-4ad1-b8b0-06096404b3ec}</Project>
+      <Name>TshirtStore.Infra</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TshirtStore.SharedKernel\TshirtStore.SharedKernel.csproj">
-      <Project>{A8C46B03-AA85-4B89-9156-1AE00A380B30}</Project>
+      <Project>{a8c46b03-aa85-4b89-9156-1ae00a380b30}</Project>
       <Name>TshirtStore.SharedKernel</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
